# Panzer-usage-learning

./: README.md
code/PossionExample/: CMakeLists.txt
code/PossionExample/include/: Poisson_BCStrategy_Dirichlet_Constant_decl_impl.hpp  Poisson_BCStrategy_Factory.hpp  Poisson_ClosureModel_Factory_TemplateBuilder.hpp  Poisson_ClosureModel_Factory_decl_impl.hpp  Poisson_EquationSet_Factory.hpp  Poisson_EquationSet_decl_impl.hpp  Poisson_Evaluator_decl_impl.hpp  Poisson_Solution_Function_decl_impl.hpp  Poisson_Source_Function_decl_impl.hpp
code/PossionExample/src/: main.cpp
doc/: Kokkos-Trilinos-Notes.tex
doc/Latex/sections/: Galeri Belos Ifpack2.tex  Kokkos - Linear advection equation.tex  Panzer Laplace Example.tex  Tutorial Step 1.tex  Tutorial Step 2.tex  Tutorial Step 3 - GEMM and Euler Flow.tex  Tutorial Step 4 - Dual View and BlockJacobi.tex
doc/Markdown/: MixedLaplace.md
doc/sections/: Convection Equation Example.tex  Kokkos - Euler Equation.tex  Trilinos Tpetra MultiVector and CrsMatrix.tex
